--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -21,18 +21,17 @@
                         <div class="row align-items-center">
                            <div class="col-xl-5 col-lg-6 col-md-6">
                               <div class="tp-slider-content p-relative z-index-1">
-                                 <span>Starting at <b>$274.00</b></span>
-                                 <h3 class="tp-slider-title">The best tablet Collection 2023</h3>
-                                 <p>Exclusive offer 
-                                    <span>-35% 
+                                 <h3 class="tp-slider-title">Лучшая коллекция умных часов 2023 года</h3>
+                                 <p>
+                                    <span>Barmak.store
                                        <svg width="94" height="20" viewBox="0 0 94 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M74.8576 4.63367L78.6048 5.11367C80.9097 5.35155 82.8309 5.75148 84.4483 5.97993L86.6581 6.31091L88.4262 6.63948C89.4684 6.81761 90.2699 6.9312 90.8805 6.99186C93.3213 7.24888 92.7011 6.63674 92.8183 6.12534C92.9355 5.61394 93.7175 5.37081 91.3267 4.45886C90.73 4.24001 89.9345 3.97481 88.8826 3.65818L87.1034 3.12577L84.8643 2.63282C83.236 2.28025 81.2402 1.82307 78.8684 1.52138L75.0177 0.981633C73.6188 0.823014 72.1417 0.730003 70.5389 0.582533C63.0297 0.0282543 55.4847 0.193022 48.0068 1.07459C39.9065 2.04304 31.9328 3.87384 24.2213 6.53586C18.0824 8.61764 12.1674 11.3089 6.56479 14.5692C4.88189 15.5255 3.25403 16.5756 1.68892 17.7145C0.568976 18.5077 -0.00964231 18.9932 0.0547097 19.0858C0.388606 19.6584 10.6194 13.1924 25.151 8.99361C32.789 6.72748 40.6283 5.20536 48.5593 4.44848C55.8569 3.76455 63.1992 3.69678 70.5082 4.24591L74.8223 4.62335" fill="currentColor"/>
                                        </svg>
                                     </span>
-                                 off this week</p>
+                                 </p>
    
                                  <div class="tp-slider-btn">
-                                    <a href="shop.html" class="tp-btn tp-btn-2 tp-btn-white">Shop Now
+                                    <a href="{% url 'products' %}" class="tp-btn tp-btn-2 tp-btn-white">Купить сейчас
                                        <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M16 6.99976L1 6.99976" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                           <path d="M9.9502 0.975414L16.0002 6.99941L9.9502 13.0244" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -60,18 +59,17 @@
                         <div class="row align-items-center">
                            <div class="col-xl-5 col-lg-6 col-md-6">
                               <div class="tp-slider-content p-relative z-index-1">
-                                 <span>Starting at <b>$999.00</b></span>
-                                 <h3 class="tp-slider-title">The best note book collection 2023</h3>
-                                 <p>Exclusive offer 
-                                    <span>-10% 
+                                 <h3 class="tp-slider-title">Лучшая коллекция ноутбуков 2023 года</h3>
+                                 <p> 
+                                    <span>Barmak.store
                                        <svg width="94" height="20" viewBox="0 0 94 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M74.8576 4.63367L78.6048 5.11367C80.9097 5.35155 82.8309 5.75148 84.4483 5.97993L86.6581 6.31091L88.4262 6.63948C89.4684 6.81761 90.2699 6.9312 90.8805 6.99186C93.3213 7.24888 92.7011 6.63674 92.8183 6.12534C92.9355 5.61394 93.7175 5.37081 91.3267 4.45886C90.73 4.24001 89.9345 3.97481 88.8826 3.65818L87.1034 3.12577L84.8643 2.63282C83.236 2.28025 81.2402 1.82307 78.8684 1.52138L75.0177 0.981633C73.6188 0.823014 72.1417 0.730003 70.5389 0.582533C63.0297 0.0282543 55.4847 0.193022 48.0068 1.07459C39.9065 2.04304 31.9328 3.87384 24.2213 6.53586C18.0824 8.61764 12.1674 11.3089 6.56479 14.5692C4.88189 15.5255 3.25403 16.5756 1.68892 17.7145C0.568976 18.5077 -0.00964231 18.9932 0.0547097 19.0858C0.388606 19.6584 10.6194 13.1924 25.151 8.99361C32.789 6.72748 40.6283 5.20536 48.5593 4.44848C55.8569 3.76455 63.1992 3.69678 70.5082 4.24591L74.8223 4.62335" fill="currentColor"/>
                                        </svg>
                                     </span>
-                                 off this week</p>
+                                 </p>
    
                                  <div class="tp-slider-btn">
-                                    <a href="shop.html" class="tp-btn tp-btn-2 tp-btn-white">Shop Now
+                                    <a href="{% url 'products' %}" class="tp-btn tp-btn-2 tp-btn-white">Купить сейчас
                                        <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M16 6.99976L1 6.99976" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                           <path d="M9.9502 0.975414L16.0002 6.99941L9.9502 13.0244" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -99,18 +97,17 @@
                         <div class="row align-items-center">
                            <div class="col-xl-5 col-lg-6 col-md-6">
                               <div class="tp-slider-content p-relative z-index-1">
-                                 <span>Starting at <b>$999.00</b></span>
-                                 <h3 class="tp-slider-title">The best note book collection 2023</h3>
-                                 <p>Exclusive offer 
-                                    <span>-10% 
+                                 <h3 class="tp-slider-title">Лучшая коллекция ноутбуков 2023 года</h3>
+                                 <p>
+                                    <span>Barmak.store
                                        <svg width="94" height="20" viewBox="0 0 94 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M74.8576 4.63367L78.6048 5.11367C80.9097 5.35155 82.8309 5.75148 84.4483 5.97993L86.6581 6.31091L88.4262 6.63948C89.4684 6.81761 90.2699 6.9312 90.8805 6.99186C93.3213 7.24888 92.7011 6.63674 92.8183 6.12534C92.9355 5.61394 93.7175 5.37081 91.3267 4.45886C90.73 4.24001 89.9345 3.97481 88.8826 3.65818L87.1034 3.12577L84.8643 2.63282C83.236 2.28025 81.2402 1.82307 78.8684 1.52138L75.0177 0.981633C73.6188 0.823014 72.1417 0.730003 70.5389 0.582533C63.0297 0.0282543 55.4847 0.193022 48.0068 1.07459C39.9065 2.04304 31.9328 3.87384 24.2213 6.53586C18.0824 8.61764 12.1674 11.3089 6.56479 14.5692C4.88189 15.5255 3.25403 16.5756 1.68892 17.7145C0.568976 18.5077 -0.00964231 18.9932 0.0547097 19.0858C0.388606 19.6584 10.6194 13.1924 25.151 8.99361C32.789 6.72748 40.6283 5.20536 48.5593 4.44848C55.8569 3.76455 63.1992 3.69678 70.5082 4.24591L74.8223 4.62335" fill="currentColor"/>
                                        </svg>
                                     </span>
-                                 off this week</p>
+                                 </p>
    
                                  <div class="tp-slider-btn">
-                                    <a href="shop.html" class="tp-btn tp-btn-2 tp-btn-white">Shop Now
+                                    <a href="{% url 'products' %}" class="tp-btn tp-btn-2 tp-btn-white">Купить сейчас
                                        <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M16 6.99976L1 6.99976" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                           <path d="M9.9502 0.975414L16.0002 6.99941L9.9502 13.0244" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -161,7 +158,7 @@
                            <h3 class="tp-product-category-title">
                               <a href="{% url 'category_detail' category.slug %}">{{category.title}}</a>
                            </h3>
-                           <p>20 Product</p>
+                           <p>{{category.category_products.all.count}} продуктов</p>
                         </div>
                      </div>
                   </div>
@@ -385,7 +382,7 @@
                                     
    
                                     <div class="tp-product-add-cart-btn-large-wrapper">
-                                       <button type="button" class="tp-product-add-cart-btn-large">
+                                       <a href="{% url 'product_detail' product.id %}" class="tp-product-add-cart-btn-large">
                                           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.93795 5.34749L4.54095 12.5195C4.58495 13.0715 5.03594 13.4855 5.58695 13.4855H5.59095H16.5019H16.5039C17.0249 13.4855 17.4699 13.0975 17.5439 12.5825L18.4939 6.02349C18.5159 5.86749 18.4769 5.71149 18.3819 5.58549C18.2879 5.45849 18.1499 5.37649 17.9939 5.35449C17.7849 5.36249 9.11195 5.35049 3.93795 5.34749ZM5.58495 14.9855C4.26795 14.9855 3.15295 13.9575 3.04595 12.6425L2.12995 1.74849L0.622945 1.48849C0.213945 1.41649 -0.0590549 1.02949 0.0109451 0.620487C0.082945 0.211487 0.477945 -0.054513 0.877945 0.00948704L2.95795 0.369487C3.29295 0.428487 3.54795 0.706487 3.57695 1.04649L3.81194 3.84749C18.0879 3.85349 18.1339 3.86049 18.2029 3.86849C18.7599 3.94949 19.2499 4.24049 19.5839 4.68849C19.9179 5.13549 20.0579 5.68649 19.9779 6.23849L19.0289 12.7965C18.8499 14.0445 17.7659 14.9855 16.5059 14.9855H16.5009H5.59295H5.58495Z" fill="currentColor"/>
                                              <path fill-rule="evenodd" clip-rule="evenodd" d="M14.8979 9.04382H12.1259C11.7109 9.04382 11.3759 8.70782 11.3759 8.29382C11.3759 7.87982 11.7109 7.54382 12.1259 7.54382H14.8979C15.3119 7.54382 15.6479 7.87982 15.6479 8.29382C15.6479 8.70782 15.3119 9.04382 14.8979 9.04382Z" fill="currentColor"/>
@@ -396,8 +393,8 @@
                                              
                                              <path fill-rule="evenodd" clip-rule="evenodd" d="M16.434 18.0409C16.322 18.0409 16.23 18.1329 16.23 18.2459C16.231 18.4749 16.641 18.4729 16.64 18.2459C16.64 18.1329 16.547 18.0409 16.434 18.0409ZM16.434 19.5409C15.72 19.5409 15.14 18.9599 15.14 18.2459C15.14 17.5319 15.72 16.9519 16.434 16.9519C17.149 16.9519 17.73 17.5319 17.73 18.2459C17.73 18.9599 17.149 19.5409 16.434 19.5409Z" fill="currentColor"/>
                                              </svg>  
-                                             Add To Cart                                           
-                                       </button>
+                                             Купить                                           
+                                       </a>
                                     </div>
                                  </div>
                                  <!-- product content -->
@@ -773,24 +770,21 @@
                <div class="row align-items-center">
                   <div class="col-xl-7 col-lg-7">
                      <div class="tp-subscribe-content">
-                        <span>Sale 20% off all store</span>
-                        <h3 class="tp-subscribe-title">Subscribe our Newsletter</h3>
+                        <span>Напишите нам</span>
+                        <h3 class="tp-subscribe-title">И мы с вами свяжемся</h3>
                      </div>
                   </div>
                   <div class="col-xl-5 col-lg-5">
                      <div class="tp-subscribe-form">
-                        <form action="index.html#">
                            <div class="tp-subscribe-input">
-                              <input type="email" placeholder="Enter Your Email">
-                              <button type="submit">Subscribe</button>
+                              <a href="{% url 'contact' %}"><button style="border-radius: 15px; background-color: rgb(0, 51, 255);">Написать</button></a>
                            </div>
-                        </form>
                      </div>
                   </div>
                </div>
             </div>
          </section>
-         <!-- subscribe area end -->   
+         <!-- subscribe area end -->
          
          <div class="modal fade tp-product-modal" id="producQuickViewModal" tabindex="-1" aria-labelledby="producQuickViewModal" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
@@ -916,10 +910,10 @@
                                  </div>
                               </div>
                               <div class="tp-product-details-add-to-cart mb-15 w-100">
-                                 <button class="tp-product-details-add-to-cart-btn w-100">Add To Cart</button>
+                                 <button class="tp-product-details-add-to-cart-btn w-100">Купить</button>
                               </div>
                            </div>
-                           <button class="tp-product-details-buy-now-btn w-100">Buy Now</button>
+                           <button class="tp-product-details-buy-now-btn w-100">Купить</button>
                         </div>
                         <div class="tp-product-details-action-sm">
                            <button type="button" class="tp-product-details-action-sm-btn">
