--- a/templates/base/about.html
+++ b/templates/base/about.html
@@ -17,7 +17,7 @@
                <div class="row">
                   <div class="col-xl-12">
                      <div class="tp-about-banner-thumb w-img">
-                        <img src="{{about.image.url}}" alt="">
+                        <img src="{{about.image.url}}" style="width: 70%;" alt="">
                      </div>
                   </div>
                </div>
