--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -11,10 +11,10 @@
                <div class="row">
                   <div class="col-xxl-12">
                      <div class="breadcrumb__content p-relative z-index-1">
-                        <h3 class="breadcrumb__title">My account</h3>
+                        <h3 class="breadcrumb__title">С возвращением!</h3>
                         <div class="breadcrumb__list">
-                           <span><a href="login.html#">Home</a></span>
-                           <span>My account</span>
+                           <span><a href="{% url 'index' %}">Главная страница</a></span>
+                           <span>Войти</span>
                         </div>
                      </div>
                   </div>
@@ -36,15 +36,15 @@
                   <div class="col-xl-6 col-lg-8">
                      <div class="tp-login-wrapper">
                         <div class="tp-login-top text-center mb-30">
-                           <h3 class="tp-login-title">Login to Shofy.</h3>
-                           <p>Don’t have an account? <span><a href="register.html">Create a free account</a></span></p>
+                           <h3 class="tp-login-title">Войдите в {{settings.title}}</h3>
+                           <p>У вас нет учетной записи? <span><a href="{% url 'register' %}"> Создать аккаунт</a></span></p>
                         </div>
                         <div class="tp-login-option">
                            <div class="tp-login-social mb-10 d-flex flex-wrap align-items-center justify-content-center">
                               <div class="tp-login-option-item has-google">
                                  <a href="login.html#">
                                     <img src="{% static 'assets/img/icon/login/google.svg' %}" alt="">
-                                    Sign in with google
+                                    Продолжить с Google
                                  </a>
                               </div>
                               <div class="tp-login-option-item">
@@ -59,20 +59,22 @@
                               </div>
                            </div>
                            <div class="tp-login-mail text-center mb-40">
-                              <p>or Sign in with <a href="login.html#">Email</a></p>
+                              <p>Войдите в свою учетную запись</a></p>
                            </div>
+                           <form method="post">
+                              {% csrf_token %}
                            <div class="tp-login-input-wrapper">
                               <div class="tp-login-input-box">
                                  <div class="tp-login-input">
-                                    <input id="email" type="email" placeholder="shofy@mail.com">
+                                    <input name="username" id="username" type="text" placeholder="Barmak">
                                  </div>
                                  <div class="tp-login-input-title">
-                                    <label for="email">Your Email</label>
+                                    <label for="username">Введите логин (ФИО)</label>
                                  </div>
                               </div>
                               <div class="tp-login-input-box">
                                  <div class="tp-login-input">
-                                    <input id="tp_password" type="password" placeholder="Min. 6 character">
+                                    <input name="password" id="tp_password" type="password" placeholder="Min. 6 character">
                                  </div>
                                  <div class="tp-login-input-eye" id="password-show-toggle">
                                     <span id="open-eye" class="open-eye">
@@ -93,22 +95,19 @@
                                     </span>
                                  </div>
                                  <div class="tp-login-input-title">
-                                    <label for="tp_password">Password</label>
+                                    <label for="tp_password">Пароль</label>
                                  </div>
                               </div>
                            </div>
                            <div class="tp-login-suggetions d-sm-flex align-items-center justify-content-between mb-20">
-                              <div class="tp-login-remeber">
-                                 <input id="remeber" type="checkbox">
-                                 <label for="remeber">Remember me</label>
-                              </div>
                               <div class="tp-login-forgot">
-                                 <a href="forgot.html">Forgot Password?</a>
+                                 <a href="forgot.html">Забыли пароль?</a>
                               </div>
                            </div>
                            <div class="tp-login-bottom">
-                              <a href="profile.html" class="tp-login-btn w-100">Login</a>
+                              <button class="tp-login-btn w-100" type="submit">Войти</button>
                            </div>
+                           </form>
                         </div>
                      </div>
                   </div>
